Date now displays in more readable format, fixed sizing for ifame.

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root {
+  margin: 0 auto;
+  display: inline-block;
+}
